@@ -1,3 +1,9 @@
+HEAD
+	- split the documentation of the procedural interface out to
+	  File::Find::Rule::Procedural, as people would often seem to get
+	  confused that the method calls didn't take anonymous arrays
+	  after seeing the procedural code that did
+
 0.10	10th March 2003
 	- fixup an accidental warning in the stat-based tests.  Caught
 	  by Alex Gough (rt.cpan.org #2138)
